# autocorrect

./: .gitignore  404.html  Cargo.toml
assets/: autocorrect-dbd3e286.js  autocorrect_bg-23250b47.wasm  cssMode-628c0b58.js  freemarker2-3775c530.js  handlebars-e963689f.js  html-fa26e7c1.js  htmlMode-ef4d5985.js  index-2cca654e.css  javascript-95e28d07.js  jsonMode-05b05932.js  liquid-34f80f44.js  python-530051e1.js  razor-d650336e.js  tsMode-b7276031.js  typescript-ff9af9b9.js  xml-95388749.js  yaml-d36c28db.js
autocorrect-swift/: Cargo.toml  Makefile  build-rust.sh  build.rs
autocorrect-swift/src/: lib.rs
autocorrect-uniffi/: Cargo.toml  Makefile  build-swift.sh  build.rs  uniffi.toml
autocorrect-uniffi/src/: autocorrect.udl  lib.rs
